--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,65 +1,77 @@
-NAME = ../archive/libft.a
+NAME 		= ../archive/libft.a
 
-CC = gcc $(CFLAG) -c
+IDIR 		=../include
 
-CFLAG = -Wall -Werror -Wextra -I $(IDIR)
+CFLAG 		= -Wall -Werror -Wextra -I $(IDIR)
 
-RM = rm -f
+CC 		= gcc $(CFLAG) -c
 
-LIB = ar rc $(NAME)
+RM 		= rm -f
 
-DIR = src/
+DRM		= rm -fr
 
-ODIR = obj/
+LIB 		= ar rc $(NAME)
 
-IDIR =../include
+DIR 		= src/
 
-SRC_MANDATORY_F = ft_isalpha.c\
-	ft_isdigit.c\
-	ft_isalnum.c\
-	ft_isascii.c\
-	ft_isprint.c\
-	ft_isspace.c\
-	ft_strlen.c\
-	ft_memset.c\
-	ft_bzero.c\
-	ft_memcpy.c\
-	ft_memmove.c\
-	ft_memccpy.c\
-	ft_strncpy.c\
-	ft_strcpy.c\
-	ft_strcat.c\
-	ft_strlcpy.c\
-	ft_strlcat.c\
-	ft_toupper.c\
-	ft_tolower.c\
-	ft_strchr.c\
-	ft_strrchr.c\
-	ft_strncmp.c\
-	ft_memchr.c\
-	ft_memcmp.c\
-	ft_strnstr.c\
-	ft_atoi.c\
-	ft_calloc.c\
-	ft_strdup.c\
-	ft_memcpy_rvs.c\
-	ft_substr.c\
-	ft_strjoin.c\
-	ft_strtrim.c\
-	ft_split.c\
-	ft_itoa.c\
-	ft_strmapi.c\
-	ft_striteri.c\
-	ft_putchar_fd.c\
-	ft_putstr_fd.c\
-	ft_putendl_fd.c\
-	ft_putnbr_fd.c\
-	ft_uitoa.c\
-	ft_min.c\
-	ft_max.c\
-	ft_atof.c
+DIR_EXTRA	= src_extra/
 
-SRC_BONUS_F = ft_lstnew.c\
+DIR_BONUS 	= src_bonus/
+
+ODIR 		= obj/
+
+ODIR_EXTRA	= obj_extra/
+
+ODIR_BONUS	= obj_bonus/
+
+
+SRC_FILES 	= 	ft_isalpha.c\
+			ft_isdigit.c\
+			ft_isalnum.c\
+			ft_isascii.c\
+			ft_isprint.c\
+			ft_isspace.c\
+			ft_strlen.c\
+			ft_memset.c\
+			ft_bzero.c\
+			ft_memcpy.c\
+			ft_memmove.c\
+			ft_memccpy.c\
+			ft_strlcpy.c\
+			ft_strlcat.c\
+			ft_toupper.c\
+			ft_tolower.c\
+			ft_strchr.c\
+			ft_strrchr.c\
+			ft_strncmp.c\
+			ft_memchr.c\
+			ft_memcmp.c\
+			ft_strnstr.c\
+			ft_atoi.c\
+			ft_calloc.c\
+			ft_strdup.c\
+			ft_memcpy_rvs.c\
+			ft_substr.c\
+			ft_strjoin.c\
+			ft_strtrim.c\
+			ft_split.c\
+			ft_itoa.c\
+			ft_strmapi.c\
+			ft_striteri.c\
+			ft_putchar_fd.c\
+			ft_putstr_fd.c\
+			ft_putendl_fd.c\
+			ft_putnbr_fd.c
+
+SRC_FILES_EXTRA =	ft_strncpy.c\
+			ft_strcpy.c\
+			ft_strcat.c\
+			ft_uitoa.c\
+			ft_min.c\
+			ft_max.c\
+			ft_atof.c
+
+SRC_FILES_BONUS =	ft_lstnew.c\
 			ft_lstadd_front.c\
 			ft_lstsize.c\
 			ft_lstlast.c\
@@ -67,40 +79,57 @@ SRC_BONUS_F = ft_lstnew.c\
 			ft_lstdelone.c\
 			ft_lstclear.c\
 			ft_lstiter.c\
-			ft_lstmap.c\
+			ft_lstmap.c
 
 
 $(ODIR)%.o : $(DIR)%.c
 	$(CC) $(CFLAG) $< -o $@
 
+$(ODIR_EXTRA)%.o : $(DIR_EXTRA)%.c
+	$(CC) $(CFLAG) $< -o $@
+
+$(ODIR_BONUS)%.o : $(DIR_BONUS)%.c
+	$(CC) $(CFLAG) $< -o $@
+
+
+
+OBG = $(SRC_FILES:.c=.o)
+
+OBG_EXTRA = $(SRC_FILES_EXTRA:.c=.o)
+
+OBG_BONUS = $(SRC_FILES_BONUS:.c=.o)
+
 
 OFILE  = $(addprefix $(ODIR), $(OBG))
-OFILE_BONUS = $(addprefix $(ODIR), $(OBG_BONUS))
 
-SRC =  $(SRC_MANDATORY_F)
-OBG = $(SRC:.c=.o)
+OFILE_EXTRA  = $(addprefix $(ODIR_EXTRA), $(OBG_EXTRA))
 
-SRC_BONUS = $(SRC_BONUS_F)
-OBG_BONUS = $(SRC_BONUS:.c=.o)
+OFILE_BONUS  = $(addprefix $(ODIR_BONUS), $(OBG_BONUS))
+
 
 DEF_COLOR = \033[0;39m
 GREEN = \033[0;92m
 RED = \033[0;91m
 CIANO = \033[0;96m
 
+
 all: $(NAME)
 
-$(NAME): $(OFILE)
-	@$(LIB) $(OFILE)
+$(NAME): dir $(OFILE) $(OFILE_EXTRA)
+	@$(LIB) $(OFILE_EXTRA)
+	@echo "$(GREEN)libft.a extra file compilati correttamente!$(DEF_COLOR)"
+	@$(LIB) $(OFILE) 
 	@echo "$(GREEN)libft.a compilata con successo!$(DEF_COLOR)"
 
 
 clean:
-	@$(RM) $(OFILE) $(OFILE_BONUS)
+	@$(RM) $(OFILE) $(OFILE_EXTRA) $(OFILE_BONUS)
+	@$(DRM) $(ODIR) $(ODIR_EXTRA) $(ODIR_BONUS)
 	@echo "$(CIANO)file .obj di libft eliminati con successo!$(DEF_COLOR)"
 
 clean2:
-	@$(RM) $(OFILE) $(OFILE_BONUS)
+	@$(RM) $(OFILE) $(OFILE_EXTRA) $(OFILE_BONUS)
+	@$(DRM) $(ODIR) $(ODIR_EXTRA) $(ODIR_BONUS)
 
 fclean: clean2
 	@$(RM) $(NAME)
@@ -108,9 +137,22 @@ fclean: clean2
 
 re: fclean all 
 
-bonus: $(OFILE) $(OFILE_BONUS)
-	@$(LIB) $(OFILE) $(OFILE_BONUS)
+bonus: dir_bonus $(OFILE) $(OFILE_EXTRA) $(OFILE_BONUS)
+	@$(LIB) $(OFILE) $(OFILE_EXTRA) $(OFILE_BONUS)
 	@echo "$(GREEN)bonus libft.a compilata con successo!$(DEF_COLOR)"
+
+dir:
+	if [ ! -d "$(ODIR)" ]; then \
+		mkdir $(ODIR); \
+	fi
+	if [ ! -d "$(ODIR_EXTRA)" ]; then \
+		mkdir $(ODIR_EXTRA); \
+	fi
+
+dir_bonus: dir
+	if [ ! -d "$(ODIR_BONUS)" ]; then \
+		mkdir $(ODIR_BONUS); \
+	fi
 
 .PHONY: all clean fclean bonus
 
